manifests/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: touniminui-route
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`touniminuit.cloudnativemauritius.com`)
#     services:
#     - name: touni-minuit
#       port: 80
#   tls:
#     certResolver: le


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: touniminuit
  annotations:
    cert-manager.io/cluster-issuer: "issuer"

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - touniminuit.cloudnativemauritius.com
    secretName: touniminuit-tls
  rules:
  - host: touniminuit.cloudnativemauritius.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: touni-minuit
            port:
              number: 80
